--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,10 @@ env:
 install:
   - pip install pipenv
   - pipenv sync -d
-  - pipenv install -d pytest-django
 
 script:
   - pipenv run flake8 .
-  - pipenv run pytest
+  - pipenv run pytest --cov==pypro
+
+after_success:
+  - pipenv run codecov
